--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.github.deskid.focusreader"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -45,6 +45,7 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:support-vector-drawable:$support_version"
+    compile "com.android.support:palette-v7:$support_version"
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
