--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".screens.tugua.WebViewActivity"/>
+        <activity android:name=".screens.zhihudaily.ZhihuWebViewActivity"/>
         <activity android:name=".screens.yitu.ZenImageDetailAct" />
     </application>
 
