--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.github.deskid.focusreader"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,8 +25,8 @@ android {
 }
 
 ext {
-    support_version = '25.4.0'
-    arch_version = '1.0.0-alpha5'
+    support_version = '26.0.0'
+    arch_version = '1.0.0-alpha7'
 }
 
 
@@ -84,6 +84,9 @@ dependencies {
 
     //jsoup
     implementation 'org.jsoup:jsoup:1.10.3'
+
+    //ahbottomnavigation
+    implementation 'com.aurelhubert:ahbottomnavigation:2.0.6'
 }
 
 
