--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -29,8 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screens.tugua.WebViewActivity"/>
-        <activity android:name=".screens.zhihudaily.ZhihuWebViewActivity"/>
+        <activity android:name=".screens.tugua.WebViewActivity" />
+        <activity android:name=".screens.zhihudaily.ZhihuWebViewActivity" />
         <activity android:name=".screens.yitu.ZenImageDetailAct" />
     </application>
 
