--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,9 @@ dependencies {
 
     //PhotoView
     compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    
+    //Slidr
+    compile 'com.r0adkll:slidableactivity:2.0.5'
 }
 
 
