--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screens.tugua.WebViewActivity" />
-        <activity android:name=".screens.zhihudaily.ZhihuWebViewActivity" />
+        <activity android:name=".screens.tugua.WebViewActivity"
+            android:theme="@style/AppTheme.SlidrTheme"/>
+        <activity android:name=".screens.zhihudaily.ZhihuWebViewActivity"
+            android:theme="@style/AppTheme.SlidrTheme"/>
         <activity android:name=".screens.yitu.ZenImageDetailAct" />
     </application>
 
