--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.github.deskid.focusreader"
         minSdkVersion 21
@@ -31,8 +30,8 @@ android {
 }
 
 ext {
-    support_version = '26.0.2'
-    arch_version = '1.0.0-alpha9'
+    support_version = '26.1.0'
+    arch_version = '1.0.0-rc1'
 }
 
 
@@ -73,7 +72,7 @@ dependencies {
 
     //rxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
 
     //dagger
     implementation "com.google.dagger:dagger:2.11"
