--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screens.tugua.WebViewActivity"
+        <activity
+            android:name=".screens.penti.tugua.WebViewActivity"
             android:theme="@style/AppTheme.SlidrTheme"/>
         <activity android:name=".screens.zhihudaily.ZhihuWebViewActivity"
             android:theme="@style/AppTheme.SlidrTheme"/>
-        <activity android:name=".screens.yitu.ZenImageDetailAct" />
+        <activity android:name=".screens.penti.yitu.ZenImageDetailAct" />
     </application>
 
 </manifest>
