--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.13.0'
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
@@ -50,12 +52,12 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:support-vector-drawable:$support_version"
-    compile "com.android.support:palette-v7:$support_version"
-    compile "com.android.support:customtabs:$support_version"
+    implementation "com.android.support:palette-v7:$support_version"
+    implementation "com.android.support:customtabs:$support_version"
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-
+//    implementation 'androidx.core:core-ktx:0.1'
 
     implementation "android.arch.persistence.room:runtime:$arch_version"
     annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
@@ -65,11 +67,11 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
 
     //retrofit
-    implementation "com.google.code.gson:gson:2.8.0"
-    implementation "com.squareup.retrofit2:retrofit:2.2.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.2.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.2.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.6.0"
+    implementation "com.google.code.gson:gson:2.8.1"
+    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.9.1"
 
     //rxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -79,12 +81,19 @@ dependencies {
     implementation "com.google.dagger:dagger:2.11"
     annotationProcessor "com.google.dagger:dagger-compiler:2.11"
 
+    // Dagger Android
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
+    implementation "com.google.dagger:dagger-android-support:2.11"
+    //if you are not using support library, include this instead
+    //compile "com.google.dagger:dagger-android:2.11"
+
+
     //picasso
     //implementation 'com.squareup.picasso:picasso:2.5.2'
 
     //glide
-    implementation 'com.github.florent37:glidepalette:2.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    implementation 'com.github.florent37:glidepalette:2.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
     //annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 
     //anko extension
@@ -97,13 +106,13 @@ dependencies {
     implementation 'com.aurelhubert:ahbottomnavigation:2.0.6'
 
     //PhotoView
-    compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     
     //Slidr
-    compile 'com.r0adkll:slidableactivity:2.0.5'
+    implementation 'com.r0adkll:slidableactivity:2.0.5'
 
     //log Utils
-    compile 'com.github.deskid:logutils:1.0.3'
+    implementation 'com.github.deskid:logutils:1.0.3'
 }
 
 
