--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,15 @@
         </activity>
         <activity
             android:name=".screens.penti.tugua.WebViewActivity"
-            android:theme="@style/AppTheme.SlidrTheme"/>
-        <activity android:name=".screens.zhihudaily.ZhihuWebViewActivity"
-            android:theme="@style/AppTheme.SlidrTheme"/>
+            android:theme="@style/AppTheme.SlidrTheme" />
+        <activity
+            android:name=".screens.zhihudaily.ZhihuWebViewActivity"
+            android:theme="@style/AppTheme.SlidrTheme" />
         <activity android:name=".screens.penti.yitu.ZenImageDetailAct" />
+        <activity
+            android:name=".screens.readhub.InstantViewActivity"
+            android:theme="@style/AppTheme.SlidrTheme" />
+
     </application>
 
 </manifest>
