--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ android {
 }
 
 ext {
-    support_version = '27.0.2'
-    arch_version = '1.0.0'
+    support_version = '27.1.1'
+    arch_version = '1.1.0'
 }
 
 
@@ -43,7 +43,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.13.0'
+    testImplementation 'org.mockito:mockito-core:2.13.0'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -52,19 +52,18 @@ dependencies {
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:support-v4:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
-    implementation "com.android.support:design:$support_version"
     implementation "com.android.support:support-vector-drawable:$support_version"
     implementation "com.android.support:palette-v7:$support_version"
     implementation "com.android.support:customtabs:$support_version"
 
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 
 //    implementation 'androidx.core:core-ktx:0.1'
 
     implementation "android.arch.persistence.room:runtime:$arch_version"
     kapt "android.arch.persistence.room:compiler:$arch_version"
-    implementation "android.arch.lifecycle:runtime:1.1.0"
-    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:runtime:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.persistence.room:rxjava2:$arch_version"
     kapt "android.arch.lifecycle:compiler:$arch_version"
 
