--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 ext {
     support_version = '27.1.1'
     arch_version = '1.1.0'
+    paging_version = "1.0.1"
 }
 
 
@@ -46,7 +47,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.13.0'
 
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support:design:$support_version"
@@ -60,6 +61,7 @@ dependencies {
 
 //    implementation 'androidx.core:core-ktx:0.1'
 
+    implementation "android.arch.paging:runtime:$paging_version"
     implementation "android.arch.persistence.room:runtime:$arch_version"
     kapt "android.arch.persistence.room:compiler:$arch_version"
     implementation "android.arch.lifecycle:runtime:1.1.1"
