--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.github.deskid.focusreader">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,7 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -38,7 +40,7 @@
         <activity
             android:name=".screens.readhub.InstantViewActivity"
             android:theme="@style/AppTheme.SlidrTheme" />
-        <activity android:name=".favorite.FavorityAct"></activity>
+        <activity android:name=".favorite.FavorityAct" />
     </application>
 
 </manifest>
