--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.github.deskid.focusreader"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -32,19 +32,19 @@ android {
 }
 
 ext {
-    support_version = '27.1.1'
-    arch_version = '1.1.0'
+    support_version = '28.0.0'
+    arch_version = '1.1.1'
     paging_version = "1.0.1"
 }
 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.13.0'
+    testImplementation 'org.mockito:mockito-core:3.1.0'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -57,7 +57,7 @@ dependencies {
     implementation "com.android.support:palette-v7:$support_version"
     implementation "com.android.support:customtabs:$support_version"
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
 //    implementation 'androidx.core:core-ktx:0.1'
 
@@ -70,23 +70,23 @@ dependencies {
     kapt "android.arch.lifecycle:compiler:$arch_version"
 
     //retrofit
-    implementation "com.google.code.gson:gson:2.8.1"
-    implementation "com.squareup.retrofit2:retrofit:2.3.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.9.1"
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
 
     //rxJava
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.13'
 
     //dagger
-    implementation "com.google.dagger:dagger:2.11"
-    kapt "com.google.dagger:dagger-compiler:2.11"
+    implementation 'com.google.dagger:dagger:2.24'
+    kapt 'com.google.dagger:dagger-compiler:2.24'
 
     // Dagger Android
-    kapt "com.google.dagger:dagger-android-processor:2.11"
-    implementation "com.google.dagger:dagger-android-support:2.11"
+    kapt 'com.google.dagger:dagger-android-processor:2.24'
+    implementation 'com.google.dagger:dagger-android-support:2.24'
     //if you are not using support library, include this instead
     //compile "com.google.dagger:dagger-android:2.11"
 
@@ -96,17 +96,17 @@ dependencies {
     //glide
     implementation 'com.github.florent37:glidepalette:2.1.1'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
-    implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.6.1'
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
 
     //anko extension
     implementation "org.jetbrains.anko:anko-common:0.9.1"
 
     //jsoup
-    implementation 'org.jsoup:jsoup:1.10.3'
+    implementation 'org.jsoup:jsoup:1.12.1'
 
     //ahbottomnavigation
-    implementation 'com.aurelhubert:ahbottomnavigation:2.0.6'
+    implementation 'com.aurelhubert:ahbottomnavigation:2.2.0'
 
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
@@ -117,7 +117,7 @@ dependencies {
     //log Utils
     implementation 'com.github.deskid:logutils:1.0.3'
 
-    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
 }
 
 
